Fix : All Compile Error Solved

--- a/src/Base/Base.AspCoreUtility/Base.AspCoreUtility.csproj
+++ b/src/Base/Base.AspCoreUtility/Base.AspCoreUtility.csproj
@@ -15,4 +15,8 @@
 	  <Folder Include="Infrastructure\TagHelpers\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Base.Shared\Base.Shared.csproj" />
+	</ItemGroup>
+
 </Project>
