--- a/src/ShopManagement/Core/ShopManagement.Application.Contract/ShopManagement.Application.Contract.csproj
+++ b/src/ShopManagement/Core/ShopManagement.Application.Contract/ShopManagement.Application.Contract.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Base\Base.Resourses\Base.Resourses.csproj" />
     <ProjectReference Include="..\ShopManagement.Domain\ShopManagement.Domain.csproj" />
   </ItemGroup>
 
