--- a/src/ShopManagement/Infrastructure/ShopManagement.Infrastructure/ShopManagement.Infrastructure.csproj
+++ b/src/ShopManagement/Infrastructure/ShopManagement.Infrastructure/ShopManagement.Infrastructure.csproj
@@ -5,7 +5,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 	<ItemGroup>
+	  <PackageReference Include="Mapster" Version="7.3.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.11" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.11">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.11" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.11">
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
