--- a/src/ShopManagement/Api/ShopManagement.Api/ShopManagement.Api.csproj
+++ b/src/ShopManagement/Api/ShopManagement.Api/ShopManagement.Api.csproj
@@ -10,10 +10,10 @@
     <Folder Include="Site\" />
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+	
   <ItemGroup>
     <ProjectReference Include="..\..\Core\ShopManagement.Application.Contract\ShopManagement.Application.Contract.csproj" />
   </ItemGroup>
